masthead: fix buttons visibilty on mobile

--- a/src/blocks/Avatar/Avatar.scss
+++ b/src/blocks/Avatar/Avatar.scss
@@ -18,6 +18,8 @@
         }
         img {
             // width: 75%;
+            min-width: 50px;
+            min-height: 50px;
             max-width: 200px;
             margin: 0 auto;
             border: 7px solid rgba($grey-yoda, 0.75);
