--- a/src/styles/_core/scss/base/utilities/_utilities.scss
+++ b/src/styles/_core/scss/base/utilities/_utilities.scss
@@ -335,3 +335,11 @@ dialog .u-hide-dialog {
     align-items: center;
     justify-content: center;
 }
+
+.u-image-full {
+    width: 100%;
+    height: 100%;
+    max-width: unset;
+    max-height: unset;
+    object-fit: cover;
+}
